# InsightTrader

./: .dockerignore  .editorconfig  .env  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.ta_service  README.md  docker-compose.prod.yml  main.py  pyproject.toml  pyright-output.json  pyrightconfig.json  start-backend.ps1  start-dev.ps1  start-frontend.ps1  stop-dev.ps1
.codex/environments/: environment.toml
backtest/: EXPERIMENT_RUNBOOK.md  README.md  TUNING_WORKFLOW.md  __init__.py  decision_rules.py  execution_rules.py  generate_report_batch.py  init_experiment.py  label_signal_cases.py  metrics.py  models.py  pathing.py  render_backtest_chart.py  report_parser.py  run_report_backtest.py  summarize_experiment.py
cli/: announcements.py  main.py  stats_handler.py  utils.py
deploy/: CONTINUOUS_DEPLOY.md  INITIAL_DEPLOY.md  PRE_DEPLOY_CHECKLIST_V1.1.md  VERSION  insighttrader.service  nginx.conf  upload.py  upload_dist.py  write_env.sh
deploy/cert/: 93901.pro.key  93901.pro.pem
docs/: README.md  analysis-team-manager-design-2026-04-16.md  f3-browser-eval-cases.md  f3-open-issues.md  lite-team-decision-tuning-todo-2026-04-20.md  lite-team-opportunity-sensitive-draft-2026-04-19.md  lite-team-slow-agents-todo-2026-04-17.md  mobile-chat-frontend-insight-agent-engineering-design-v1.2.md  mobile-chat-frontend-lowfi-v1.md  mobile-chat-frontend-prd-v1.1.md  mobile-chat-frontend-prd-v1.2.md  mobile-chat-frontend-prd-v1.md  mobile-chat-frontend-task-status-engineering-design-v1.1.md  mobile-chat-frontend-tech-selection-v1.md  mobile-chat-frontend-v1.1-test-acceptance-plan.md  mobile-chat-insight-reply-todo-2026-04-16.md  resolution-agent-engineering-design-v1.md  tradingagents-latency-optimization-todo-2026-04-16.md
logs/: ta_service.log.2026-04-12
mobile_h5/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
mobile_h5/src/: main.ts
reports/002273_20260409_035348/: complete_report.md
scripts/: eval_f3_resolution.py  local-ci.ps1  local_ci.py
ta_service/: README.md  __init__.py  main.py  teams.py
ta_service/adapters/: __init__.py  result_mapper.py  tradingagents_runner.py
ta_service/api/: __init__.py  deps.py
ta_service/app/: __init__.py  factory.py
tests/: test_akshare_compat.py  test_akshare_news.py  test_backtest_execution_rules.py  test_backtest_generate_report_batch.py  test_backtest_report_parser.py  test_backtest_run_report_backtest.py  test_cli_console_rendering.py  test_conversation_service_insight_reply_logging.py  test_google_api_key.py  test_insight_reply_router.py  test_llm_response_lab.py  test_market_analyst_fast.py  test_market_aware_routing.py  test_mobile_chat_reply_samples.py  test_model_validation.py  test_observability.py  test_output_language.py  test_run_paths.py  test_ta_service_analysis_service.py  test_ta_service_analysis_worker.py  test_ta_service_auth_service.py  test_ta_service_conversation_service.py  test_ta_service_conversations_contracts.py  test_ta_service_report_insight_agent.py  test_ta_service_resolution_agent.py  test_ta_service_resolution_service.py  test_ta_service_status_mapper.py  test_ta_service_stock_lookup_gateway.py  test_ta_service_trace_scopes.py  test_ta_service_tradingagents_runner.py  test_vendor_news_lab.py
tradingagents/: __init__.py  default_config.py  observability.py  run_paths.py
(+2869 files in other folders)
