[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.3"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18.46",
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "fastapi",
    "finnhub-python>=2.4.27",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "moomoo-api>=10.1.6108",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pymongo",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tushare>=1.4.29",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "uvicorn",
    "yfinance>=0.2.63",
    "paramiko>=4.0.0",
]

[project.scripts]
tradingagents = "cli.main:app"
ta-service = "ta_service.main:run"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*", "ta_service*", "backtest*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "results",
    "mobile_h5/node_modules",
    "validation/vendor-news-lab/outputs",
    "validation/llm-response-lab/outputs",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "build",
    "debugpy>=1.8.20",
    "matplotlib>=3.10.8",
    "pre-commit",
    "pytest>=9.0.3",
    "ruff",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated and scheduled for removal in a future version\\.:DeprecationWarning:google\\.protobuf\\.internal\\.well_known_types",
]
